--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color: hsl(218, 28%, 13%)
+}
+
 h2 {
     font-family: Raleway;
 }
@@ -9,6 +13,9 @@ h3 {
 
 section {
     background-color: hsl(218, 28%, 13%);
+    padding: 40px;
+    display: flex;
+    justify-content: center;
 }
 
 .menu  {
@@ -55,25 +62,51 @@ main {
 }
 
 .sequencia-de-topicos {
+    display: grid;
+    grid: 
+    " .  topico-1 topico-2 . " 
+    " .  topico-3 topico-4 . ";
+    grid-gap: 30px;
+    grid-template-columns: minmax(240px, 358px) minmax(240px, 358px) minmax(240px, 358px) minmax(240px, 358px);
+    
+    
+
+}
+
+.topico-1 {
+    background-color: aquamarine;
+    grid-area: topico-1;
     display: flex;
-    flex-flow: wrap;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 10px;
+
 }
 
-.topico {
+.topico-2 {
+    background-color: orangered;
+    grid-area: topico-2;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    
+
 }
 
-.texto-do-topico {
-    max-width: 46%;
+.topico-3 {
+    background-color: hotpink;
+    grid-area: topico-3;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    
+
+}
+
+.topico-4 {
+    background-color: blueviolet;
+    grid-area: topico-4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
