--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ section {
     display: flex;
     justify-content: space-between;
     padding: 40px;
+
 }
 
 .lista-do-menu {
@@ -55,6 +56,7 @@ main {
     border-radius: 30px;
     transition: 0.3s ease-in-out;
     cursor: pointer;
+    font-weight: 700;
 }
 
 .bnt:hover {
@@ -132,7 +134,7 @@ main {
 
 .imagem-com-informacao {
    align-items: center;
-   padding-left: 180px;
+   padding-left: 100px;
    gap: 70px;
 }
 
@@ -174,4 +176,162 @@ main {
 .link-do-informativo {
     display: flex;
 }
+
+.comentarios {
+    display: grid;
+    grid-gap: 35px;
+    grid: " comentario-1 comentario-2 comentario-3 ";
+    grid-template-columns: minmax(200px, 350px) minmax(200px, 350px) minmax(200px, 350px);
+
+}
+
+.comentarios {
+
+}
+
+.comentario-1 {
+    grid-area: comentario-1 ;
+    background-color: hsl(219, 30%, 18%);
+    padding: 2em;
+    border-radius: .3em;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 1);
+}
+
+.comentario-2 {
+    grid-area: comentario-2 ;
+    background-color: hsl(219, 30%, 18%);
+    padding: 2em;
+    border-radius: .3em;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 1);
+}
+
+.comentario-3 {
+    grid-area: comentario-3 ;
+    background-color: hsl(219, 30%, 18%);
+    padding: 2em;
+    border-radius: .3em;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 1);
+}
+
+.img-ceo {
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+}
+
+.informacao-ceo {
+    display: flex ;  
+    align-items: center;
+    padding-top: 20px;
+}
+
+.descricao-ceo {
+    display: flex;
+    flex-flow: column;
+    padding-left: 10px;
+    justify-content: center;
+    font-size: 8px;
+    
+}
+
+.nome-do-ceo {
+   padding-bottom: 3px;
+}
+
+.email {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(219, 30%, 18%);
+    padding: 2em;
+    border-radius: .3em;
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 1);
+    position: absolute;
+}
+
+.texto-email {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: minmax(200px, 650px);
+    text-align: center;
+}
+
+.aba-email {
+    padding: 10px;
+    
+
+}
+
+.inseri-email {
+    background-color: #fff;
+    padding-bottom: 15px;
+    padding-right: 290px;
+    padding-top: 15px;
+    padding-left: 20px;
+    border-radius: 25px;
+}
+
+.bnt-email {
+    margin-left: 25px;
+    padding-right: 35px;
+    padding-left: 35px;
+    
+    
+}
+
+footer {
+    display: grid;
+    justify-content: flex-start;
+    gap: 20px;
+    background-color: hsl(216, 53%, 9%);
+    padding-left: 250px;
+    padding-bottom: 100px;
+    padding-top: 250px;
+
+}
+
+.footer-descrito {
+    grid-gap: 100px;
+    padding: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.paragrafo-footer {
+    width: 300px;
+}
+
+address {
+    padding: 10px;
+    width: 170px;
+}
+
+.texto-footer {
+    padding: 7px;
+    width: 100px;
+}
+
+.rede-sociais {
+    width: 120px;
+}
+
+.redes-socias-listada {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.logo-redes {
+    border: 1px solid #ffffff ;
+    padding: 7px;
+    border-radius: 100%;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+
+
 
